fix fi.po to fix the build.

--- a/po/fi.po
+++ b/po/fi.po
@@ -2225,16 +2225,15 @@ msgstr ""
 "Käynnistää IceWM ikkunahallinnan.\n"
 "\n"
 "Optiot:\n"
-"  --display=NIMI          X-palvelimen nimi jota käytetään\n"
+"  -d, --display=NIMI      X-palvelimen nimi jota käytetään\n"
 "%s  --sync             Synkronoi X11 komennot\n"
-"\n"
-"  -c, --config=TIEDOSTO   Lataa asetukset tiedostosta\n"
-"  -t, --theme=TIEDOSTO    Lataa teema tiedostosta\n"
-"  -n, --no-configure      Älä huomioi asetustiedostoa\n"
+"%s\n"
 "\n"
 "  -v, --version           Tulostaa versiotiedot ja poistuu\n"
 "  -h, --help              Tulostaa ohjeet ja poistuu\n"
-"%s --restart           Älä käytä tätä; vain sisäiseen käyttöön\n"
+"%s\n"
+"  --replace               Replace an existing window manager.\n"
+"  -r, --restart           Älä käytä tätä; vain sisäiseen käyttöön\n"
 "%s\n"
 "Ympäristömuuttujat:\n"
 "  ICEWM_PRIVCFG=POLKU     Hakemisto, johon käyttäjän asetukset tallennetaan."
